--- a/src/Presentation/Nop.Web/Administration/Views/Setting/SMS.cshtml
+++ b/src/Presentation/Nop.Web/Administration/Views/Setting/SMS.cshtml
@@ -48,5 +48,25 @@
                 @Html.ValidationMessageFor(model => model.MessageTemplate)
             </td>
         </tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.OverrideStoreCheckboxFor(model => model.ServiceId_OverrideForStore, model => model.ServiceId, Model.ActiveStoreScopeConfiguration)
+                @Html.NopLabelFor(model => model.ServiceId):
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => model.ServiceId)
+                @Html.ValidationMessageFor(model => model.ServiceId)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.OverrideStoreCheckboxFor(model => model.ServiceKey_OverrideForStore, model => model.ServiceKey, Model.ActiveStoreScopeConfiguration)
+                @Html.NopLabelFor(model => model.ServiceKey):
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => model.ServiceKey)
+                @Html.ValidationMessageFor(model => model.ServiceKey)
+            </td>
+        </tr>
     </table>
 }
