[5] Not in stock for simple and group products

--- a/src/Presentation/Nop.Web/Views/Product/_AddToCart.cshtml
+++ b/src/Presentation/Nop.Web/Views/Product/_AddToCart.cshtml
@@ -57,7 +57,14 @@
                 {
                     addToCartText = Model.AvailableForPreOrder ? T("ShoppingCart.PreOrder").Text : T("ShoppingCart.AddToCart").Text;
                 }
-                <input type="button" id="add-to-cart-button-@Model.ProductId" class="button-1 add-to-cart-button" value="@addToCartText" data-productid="@Model.ProductId" onclick="AjaxCart.addproducttocart_details('@Url.RouteUrl("AddProductToCart-Details", new { productId = Model.ProductId, shoppingCartTypeId = (int)ShoppingCartType.ShoppingCart })', '#product-details-form');return false;" />
+                if (Model.StockQuantity == 0)
+                {
+                    <input type="button" id="add-to-cart-button-@Model.ProductId" class="button-1 add-to-cart-button-disabled" value="@T("ShoppingCart.NotInStock")" data-productid="@Model.ProductId" onclick="AjaxCart.addproducttocart_details('@Url.RouteUrl("AddProductToCart-Details", new { productId = Model.ProductId, shoppingCartTypeId = (int)ShoppingCartType.ShoppingCart })', '#product-details-form');return false;" />
+                }
+                else
+                {
+                    <input type="button" id="add-to-cart-button-@Model.ProductId" class="button-1 add-to-cart-button" value="@addToCartText" data-productid="@Model.ProductId" onclick="AjaxCart.addproducttocart_details('@Url.RouteUrl("AddProductToCart-Details", new { productId = Model.ProductId, shoppingCartTypeId = (int)ShoppingCartType.ShoppingCart })', '#product-details-form');return false;" />
+                }
             }
             @if (!Model.DisableWishlistButton && Model.UpdatedShoppingCartItemId == 0)
             {
