--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Content/styles.css
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Content/styles.css
@@ -561,7 +561,8 @@ td.fieldname{font-size:12px;}
 .product-grid .product-item .buttons{vertical-align:middle;position:static;margin-top:5px;text-align:left;}
 .product-box-add-to-cart-button{padding:3px 7px;cursor:pointer;background:#7DB72F;background:-webkit-gradient(linear,left top,left bottom,from(#7DB72F),to(#4E7D0E));background:-moz-linear-gradient(top,#7DB72F,#4E7D0E);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#7DB72F',endColorstr='#4E7D0E');color:#fff;text-shadow:none;border-color:#999;border:0 none;font-weight:700;}
 .product-box-add-to-cart-button:hover{color:#fff;}
-
+.product-box-add-to-cart-button-disabled {padding: 3px 7px;cursor: pointer;background: #FF0000;background: -webkit-gradient(linear, left top, left bottom, from(#FF0000), to(#B20000));background: -moz-linear-gradient(top, #FF0000, #B20000);filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF0000', endColorstr='#B20000');color: #fff;text-shadow: none;border-color: #999;border: 0 none;font-weight: 700;}
+.product-box-add-to-cart-button-disabled:hover {color: #fff;}
 
 /* PRODUCTS IN LINES - TEMPLATE */
 .product-list{width:auto;margin:0 auto;padding:0;list-style-type:none;}
@@ -994,6 +995,9 @@ td.fieldname{font-size:12px;}
 .product-details-page .product-variant-list .add-to-cart-button{margin-top:15px;margin-left:0;display:block;}
 .product-details-page .no-associated-products{font-weight:bold;}
 .add-to-cart-button:hover{color:#fff;}
+.add-to-cart-button-disabled{padding:5px 10px;cursor:pointer;background:#FF0000;background:-webkit-gradient(linear,left top,left bottom,from(#FF0000),to(#B20000));background:-moz-linear-gradient(top,#FF0000,#B20000);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF0000',endColorstr='#B20000');color:#fff;text-shadow:none;border-color:#999;border:0 none;font-weight:700;font-size:1.3em;margin-top:-5px;margin-left:35px;}
+.product-details-page .product-variant-list .add-to-cart-button-disabled{margin-top:15px;margin-left:0;display:block;}
+.add-to-cart-button-disabled:hover{color:#fff;}
 .add-to-wishlist-button{display:block;margin-top:10px;}
 .product-details-page .variant-picture{clear:both;float:left;margin-bottom:15px;}
 .product-details-page .variant-overview{float:left;width:100%;}
