--- a/src/Presentation/Nop.Web/Views/Shared/_ProductBox.cshtml
+++ b/src/Presentation/Nop.Web/Views/Shared/_ProductBox.cshtml
@@ -66,7 +66,14 @@
                 @*<input type="button" value="@T("Products.Details")" class="button-1 product-box-detail-button" onclick="setLocation('@Url.RouteUrl("Product", new { SeName = Model.SeName })')" />*@
                 @if (!Model.ProductPrice.DisableBuyButton)
                 {
-                    <input type="button" value="@(Model.ProductPrice.AvailableForPreOrder ? T("ShoppingCart.PreOrder") : T("ShoppingCart.AddToCart"))" class="button-2 product-box-add-to-cart-button" onclick="AjaxCart.addproducttocart_catalog('@addtocartlink    ');return false;" />
+                    if (Model.ProductPrice.StockQuantity == 0)
+                    {
+                        <input type="button" value="@T("ShoppingCart.NotInStock")" class="button-2 product-box-add-to-cart-button-disabled" onclick="AjaxCart.addproducttocart_catalog('@addtocartlink    ');return false;" />
+                    }
+                    else
+                    {
+                        <input type="button" value="@(Model.ProductPrice.AvailableForPreOrder ? T("ShoppingCart.PreOrder") : T("ShoppingCart.AddToCart"))" class="button-2 product-box-add-to-cart-button" onclick="AjaxCart.addproducttocart_catalog('@addtocartlink    ');return false;" />
+                    }
                 }
             </div>
             @Html.Widget("productbox_add_info", Model.Id)
