--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Product/HomepageProducts.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Product/HomepageProducts.cshtml
@@ -5,6 +5,7 @@
 {
     <div class="popular-products">
         <div class="container">
+            <hr class="faded" />
             <h2>@T("HomePage.Products")</h2>
             <div id="popular-products-carousel" class="carousel owl-carousel">
                 @foreach (var item in Model)
