--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Shared/_ColumnsTwo.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Shared/_ColumnsTwo.cshtml
@@ -39,8 +39,23 @@
         {
             @Html.Widget("left_side_column_before")
             @Html.Action("CategoryNavigation", "Catalog", new { currentCategoryId = currentCategoryId, currentProductId = currentProductId })
-            @Html.Widget("left_side_column_after_category_navigation")
-            @Html.Widget("left_side_column_after")
+            @*@Html.Widget("left_side_column_after_category_navigation")
+            @Html.Widget("left_side_column_after")*@
+            <script type="text/javascript" src="//vk.com/js/api/openapi.js?116"></script>
+            <!--Social like boxes-->
+            <div id="vk_groups"></div>
+            <script type="text/javascript">
+            VK.Widgets.Group("vk_groups", {mode: 1, width: "220", color1: 'FFFFFF', color2: '2B587A', color3: '244A72'}, 48158159);
+            </script>
+            <div id="fb-root"></div>
+            <script>(function(d, s, id) {
+              var js, fjs = d.getElementsByTagName(s)[0];
+              if (d.getElementById(id)) return;
+              js = d.createElement(s); js.id = id;
+              js.src = "//connect.facebook.net/ru_RU/sdk.js#xfbml=1&version=v2.0";
+              fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
+            <div class="fb-like" data-href="https://www.facebook.com/zelectroblog" data-width="220" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
         }
     </div>
     <div id="main">
