--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Catalog/SearchBox.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Catalog/SearchBox.cshtml
@@ -5,7 +5,7 @@
 }
 @using (Html.BeginRouteForm("ProductSearch", FormMethod.Get, new { onsubmit = "return check_small_search_form()" }))
 {
-    <input type="text" placeholder="Поиск по магазину" class="search-input" id="small-searchterms" autocomplete="off" value="@searchTooltip" name="q" />
+    <input type="text" placeholder='@T("Search.SearchBox.Tooltip")' class="search-input" id="small-searchterms" autocomplete="off" value="@searchTooltip" name="q" />
      @Html.Widget("searchbox_before_search_button")
     <input type="submit" class="button search-button" value="@T("Search")">
 
