--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Shared/Header.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Shared/Header.cshtml
@@ -23,18 +23,17 @@
         </div>
         <div class="phone-block">
             <h1 class="phone">+7 978 804-78-27</h1>
-            <div class="callback">заказать звонок</div>
+            <div class="time">Время работы: 10:00 - 22:00(GMT+3)</div>
             <div class="search">
                 <form action="/search">
                     @Html.Action("SearchBox", "Catalog")
                 </form>
             </div>
         </div>
-    </div>
-
-    <div class="menu">
-        <div class="container">
-            @Html.Action("TopMenu", "Catalog")
+        <div class="menu">
+            <div class="container">
+                @Html.Action("TopMenu", "Catalog")
+            </div>
         </div>
     </div>
 </div>
