Dollar Price column in Bulk Edit. Calculates from Dynamic price settings

--- a/src/Presentation/Nop.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/Nop.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -505,7 +505,7 @@
             @Html.NopLabelFor(model => model.FirstCost):
         </td>
         <td class="adminData">
-            @Html.EditorFor(model => model.FirstCost) [@Model.PrimaryStoreCurrencyCode]
+            @Html.EditorFor(model => model.FirstCost)
             @Html.ValidationMessageFor(model => model.FirstCost)
         </td>
     </tr>
