--- a/src/Presentation/Nop.Web/Administration/Views/Setting/DynamicPrice.cshtml
+++ b/src/Presentation/Nop.Web/Administration/Views/Setting/DynamicPrice.cshtml
@@ -13,6 +13,7 @@
         <div class="options">
             <input type="submit" name="save" class="k-button" value="@T("Admin.Common.Save")" />
             <a href="@Url.Action("Recalculate", "DynamicPrice")" class="k-button">@T("Admin.Configuration.Settings.DynamicPrice.Recalculate")</a>
+            <a href="@Url.Action("CalculateDollarPrice", "DynamicPrice")" class="k-button">@T("Admin.Configuration.Settings.DynamicPrice.CalculateDollarPrice")</a>
         </div>
     </div>
     
